--- a/themes/pxl2011/less/pxl.variables.less
+++ b/themes/pxl2011/less/pxl.variables.less
@@ -1,5 +1,5 @@
 // Pixelcollider variable overrides
-
+@basefont:  14px;
 
 
 // Pixelcollider mixins
@@ -9,9 +9,8 @@
     font-weight: @weight;
     line-height: @lineHeight;
   }
-  .sans-serif(@weight: normal, @size: 14px, @lineHeight: 20px) {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: @size;
+  .sans-serif(@weight: normal, @lineHeight: 20px) {
+    font-family: freight-sans-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: @weight;
     line-height: @lineHeight;
   }
