--- a/themes/pxl2011/css/pxl.base.css
+++ b/themes/pxl2011/css/pxl.base.css
@@ -170,13 +170,13 @@ textarea {
  * Headings, body text, lists, code, and more for a versatile and durable typography system
  * ---------------------------------------------------------------------------------------- */
 p {
-  font-size: 13px;
+  font-size: 14px;
   font-weight: normal;
   line-height: 18px;
   margin-bottom: 9px;
 }
 p small {
-  font-size: 11px;
+  font-size: 12px;
   color: #bfbfbf;
 }
 h1,
@@ -357,7 +357,7 @@ fieldset {
 fieldset legend {
   display: block;
   padding-left: 150px;
-  font-size: 19.5px;
+  font-size: 21px;
   line-height: 1;
   color: #404040;
   *padding: 0 0 5px 145px;
@@ -390,7 +390,7 @@ textarea {
 }
 label {
   padding-top: 6px;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 18px;
   float: left;
   width: 130px;
@@ -411,7 +411,7 @@ select,
   width: 210px;
   height: 18px;
   padding: 4px;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 18px;
   color: #808080;
   border: 1px solid #ccc;
@@ -434,7 +434,7 @@ input[type=checkbox], input[type=radio] {
   border: none;
 }
 input[type=file] {
-  background-color: #ffffff;
+  background-color: #dddddd;
   padding: initial;
   border: initial;
   line-height: initial;
@@ -456,13 +456,13 @@ select, input[type=file] {
 }
 select[multiple] {
   height: inherit;
-  background-color: #ffffff;
+  background-color: #dddddd;
 }
 textarea {
   height: auto;
 }
 .uneditable-input {
-  background-color: #ffffff;
+  background-color: #dddddd;
   display: block;
   border-color: #eee;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
@@ -719,7 +719,7 @@ textarea[readonly] {
   text-decoration: underline;
 }
 .help-inline, .help-block {
-  font-size: 13px;
+  font-size: 14px;
   line-height: 18px;
   color: #bfbfbf;
 }
@@ -763,7 +763,7 @@ textarea[readonly] {
   line-height: 18px;
   color: #bfbfbf;
   text-align: center;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 #dddddd;
   -webkit-border-radius: 3px 0 0 3px;
   -moz-border-radius: 3px 0 0 3px;
   border-radius: 3px 0 0 3px;
@@ -813,7 +813,7 @@ textarea[readonly] {
   color: #808080;
 }
 .inputs-list label small {
-  font-size: 11px;
+  font-size: 12px;
   font-weight: normal;
 }
 .inputs-list .inputs-list {
@@ -885,7 +885,7 @@ table {
   width: 100%;
   margin-bottom: 18px;
   padding: 0;
-  font-size: 13px;
+  font-size: 14px;
   border-collapse: collapse;
 }
 table th, table td {
@@ -1097,7 +1097,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .topbar h3 a:hover, .topbar .brand:hover, .topbar ul .active > a {
   background-color: #333;
   background-color: rgba(255, 255, 255, 0.05);
-  color: #ffffff;
+  color: #dddddd;
   text-decoration: none;
 }
 .topbar h3 {
@@ -1108,7 +1108,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   display: block;
   padding: 8px 20px 12px;
   margin-left: -20px;
-  color: #ffffff;
+  color: #dddddd;
   font-size: 20px;
   font-weight: 200;
   line-height: 1;
@@ -1119,7 +1119,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 }
 .topbar p a:hover {
   background-color: transparent;
-  color: #ffffff;
+  color: #dddddd;
 }
 .topbar form {
   float: left;
@@ -1141,7 +1141,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   font-weight: 13px;
   line-height: 1;
   padding: 4px 9px;
-  color: #ffffff;
+  color: #dddddd;
   color: rgba(255, 255, 255, 0.75);
   border: 1px solid #111;
   -webkit-border-radius: 4px;
@@ -1166,13 +1166,13 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .topbar input:hover {
   background-color: #bfbfbf;
   background-color: rgba(255, 255, 255, 0.5);
-  color: #ffffff;
+  color: #dddddd;
 }
 .topbar input:focus, .topbar input.focused {
   outline: 0;
-  background-color: #ffffff;
+  background-color: #dddddd;
   color: #404040;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 #dddddd;
   border: 0;
   padding: 5px 10px;
   -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
@@ -1214,7 +1214,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   text-decoration: none;
 }
 .topbar div > ul a:hover, .nav a:hover {
-  color: #ffffff;
+  color: #dddddd;
   text-decoration: none;
 }
 .topbar div > ul .active > a, .nav .active > a {
@@ -1258,7 +1258,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .nav .menu-dropdown .dropdown-toggle,
 .topbar div > ul .dropdown-menu .dropdown-toggle,
 .nav .dropdown-menu .dropdown-toggle {
-  color: #ffffff;
+  color: #dddddd;
 }
 .topbar div > ul .menu-dropdown a.menu.open,
 .nav .menu-dropdown a.menu.open,
@@ -1292,13 +1292,13 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   background-image: -o-linear-gradient(top, #292929, #191919);
   background-image: linear-gradient(top, #292929, #191919);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#292929', endColorstr='#191919', GradientType=0);
-  color: #ffffff;
+  color: #dddddd;
 }
 .topbar div > ul .menu-dropdown .active a,
 .nav .menu-dropdown .active a,
 .topbar div > ul .dropdown-menu .active a,
 .nav .dropdown-menu .active a {
-  color: #ffffff;
+  color: #dddddd;
 }
 .topbar div > ul .menu-dropdown .divider,
 .nav .menu-dropdown .divider,
@@ -1324,14 +1324,14 @@ a.menu:after, .dropdown-toggle:after {
   margin-left: 4px;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
-  border-top: 4px solid #ffffff;
+  border-top: 4px solid #dddddd;
   filter: alpha(opacity=50);
   -khtml-opacity: 0.5;
   -moz-opacity: 0.5;
   opacity: 0.5;
 }
 .menu-dropdown, .dropdown-menu {
-  background-color: #ffffff;
+  background-color: #dddddd;
   float: left;
   display: none;
   position: absolute;
@@ -1368,7 +1368,7 @@ a.menu:after, .dropdown-toggle:after {
   margin: 5px 0;
   overflow: hidden;
   background-color: #eee;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #dddddd;
 }
 .topbar .dropdown-menu a, .dropdown-menu a {
   display: block;
@@ -1377,7 +1377,7 @@ a.menu:after, .dropdown-toggle:after {
   font-weight: normal;
   line-height: 18px;
   color: #808080;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 #dddddd;
 }
 .topbar .dropdown-menu a:hover,
 .dropdown-menu a:hover,
@@ -1403,7 +1403,7 @@ a.menu:after, .dropdown-toggle:after {
 .dropdown.open .menu,
 .open .dropdown-toggle,
 .dropdown.open .dropdown-toggle {
-  color: #ffffff;
+  color: #dddddd;
   background: #ccc;
   background: rgba(0, 0, 0, 0.3);
 }
@@ -1461,7 +1461,7 @@ a.menu:after, .dropdown-toggle:after {
 }
 .tabs .active > a, .tabs .active > a:hover {
   color: #808080;
-  background-color: #ffffff;
+  background-color: #dddddd;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -1488,19 +1488,19 @@ a.menu:after, .dropdown-toggle:after {
   margin: 5px 3px 5px 0;
   padding: 0 15px;
   line-height: 30px;
-  text-shadow: 0 1px 1px #ffffff;
+  text-shadow: 0 1px 1px #dddddd;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
 }
 .pills a:hover {
-  color: #ffffff;
+  color: #dddddd;
   text-decoration: none;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
   background-color: #00438a;
 }
 .pills .active a {
-  color: #ffffff;
+  color: #dddddd;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
   background-color: #0069d6;
 }
@@ -1530,13 +1530,13 @@ a.menu:after, .dropdown-toggle:after {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 0 #ffffff;
-  -moz-box-shadow: inset 0 1px 0 #ffffff;
-  box-shadow: inset 0 1px 0 #ffffff;
+  -webkit-box-shadow: inset 0 1px 0 #dddddd;
+  -moz-box-shadow: inset 0 1px 0 #dddddd;
+  box-shadow: inset 0 1px 0 #dddddd;
 }
 .breadcrumb li {
   display: inline;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 #dddddd;
 }
 .breadcrumb .divider {
   padding: 0 5px;
@@ -1595,7 +1595,7 @@ footer {
 .alert-message.info,
 .btn.info:hover,
 .alert-message.info:hover {
-  color: #ffffff;
+  color: #dddddd;
 }
 .btn .close, .alert-message .close {
   font-family: Arial, sans-serif;
@@ -1664,7 +1664,7 @@ footer {
   padding: 5px 14px 6px;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   color: #333;
-  font-size: 13px;
+  font-size: 14px;
   line-height: normal;
   border: 1px solid #ccc;
   border-bottom-color: #bbb;
@@ -1690,7 +1690,7 @@ footer {
   outline: 1px dotted #666;
 }
 .btn.primary {
-  color: #ffffff;
+  color: #dddddd;
   background-color: #0064cd;
   background-repeat: repeat-x;
   background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
@@ -1735,7 +1735,7 @@ footer {
   box-shadow: none;
 }
 .btn.large {
-  font-size: 15px;
+  font-size: 16px;
   line-height: normal;
   padding: 9px 14px 9px;
   -webkit-border-radius: 6px;
@@ -1744,7 +1744,7 @@ footer {
 }
 .btn.small {
   padding: 7px 9px 7px;
-  font-size: 11px;
+  font-size: 12px;
 }
 :root .alert-message, :root .btn {
   border-radius: 0 \0;
@@ -1813,7 +1813,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 .alert-message.error p a,
 .alert-message.success p a,
 .alert-message.info p a {
-  color: #ffffff;
+  color: #dddddd;
 }
 .alert-message h5 {
   line-height: 18px;
@@ -1959,7 +1959,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   z-index: 11000;
   width: 560px;
   margin: -250px 0 0 -280px;
-  background-color: #ffffff;
+  background-color: #dddddd;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
   *border: 1px solid #999;
@@ -2007,9 +2007,9 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   -webkit-border-radius: 0 0 6px 6px;
   -moz-border-radius: 0 0 6px 6px;
   border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: inset 0 1px 0 #ffffff;
-  -moz-box-shadow: inset 0 1px 0 #ffffff;
-  box-shadow: inset 0 1px 0 #ffffff;
+  -webkit-box-shadow: inset 0 1px 0 #dddddd;
+  -moz-box-shadow: inset 0 1px 0 #dddddd;
+  box-shadow: inset 0 1px 0 #dddddd;
   zoom: 1;
   margin-bottom: 0;
 }
@@ -2162,7 +2162,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   border-bottom: 1px solid #eee;
 }
 .popover .content {
-  background-color: #ffffff;
+  background-color: #dddddd;
   padding: 14px;
   -webkit-border-radius: 0 0 3px 3px;
   -moz-border-radius: 0 0 3px 3px;
@@ -2188,9 +2188,9 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 }
 .label {
   padding: 1px 3px 2px;
-  font-size: 9.75px;
+  font-size: 10.5px;
   font-weight: bold;
-  color: #ffffff;
+  color: #dddddd;
   text-transform: uppercase;
   white-space: nowrap;
   background-color: #bfbfbf;
@@ -2269,13 +2269,51 @@ a:hover {
   text-decoration: underline;
 }
 body {
-  background: #404040 url(../images/bg-linen-black.png) left top repeat;
+  background: #404040 url(../images/bg-linen-black.png) center top repeat;
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
-  font-weight: normal;
+  font-family: freight-sans-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   line-height: 18px;
-  color: #ffffff;
+  font-size: 14px;
+  color: #bfbfbf;
+}
+.page {
+  max-width: 940px;
+  padding: 24px 0 48px;
+}
+.menu a {
+  font-family: freight-sans-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+.menu a:link, .menu a:visited {
+  color: #bfbfbf;
+}
+.menu a:hover, .menu a.active {
+  color: #dddddd;
+}
+.inline {
+  list-style: none;
+  margin: 0;
+}
+.inline li {
+  display: inline;
+}
+.inline li a {
+  display: inline-block;
+  margin-right: 8px;
+  padding: 8px;
+}
+.inline li .active {
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  font-weight: 600;
+  background: rgba(153, 153, 153, 0.15);
+}
+.main-menu li {
+  font-size: 1.285714286em;
 }
 .pull-right {
   float: right;
