--- a/themes/pxl2011/less/pxl.typography.less
+++ b/themes/pxl2011/less/pxl.typography.less
@@ -4,6 +4,16 @@ h1,h2,h3,h4,h5,h6 {
   color: @grayLighter;
 }
 
+.title {
+  font-size: @fontLarge;
+  margin-bottom: 1em;
+  padding: 0 @basespacing;
+}
+
+h2 {
+  font-size: @fontMedium;
+}
+
 // Links
 a {
   color: @linkColor;
@@ -14,4 +24,9 @@ a {
     color: @linkColorHover;
     text-decoration: underline;
   }
+}
+
+// Menus
+.main-menu li {
+  font-size: @fontMedium;
 }
