--- a/themes/pxl2011/less/pxl.variables.less
+++ b/themes/pxl2011/less/pxl.variables.less
@@ -1,6 +1,12 @@
 // Pixelcollider variable overrides
 @basefont:  14px;
+@fontMedium: @basefont * 1.285714286; // 18px/14px
+@fontLarge: @basefont * 1.571428571;  // 22px/14px
 
+@gray: #9B9B9B;
+@linkColor: #0099CC;
+
+@basespacing: 13px;
 
 // Pixelcollider mixins
 #pxlfont {
