--- a/themes/pxl2011/less/pxl.variables.less
+++ b/themes/pxl2011/less/pxl.variables.less
@@ -32,3 +32,15 @@
     line-height: @lineHeight;
   }
 }
+
+// Transitions
+#pxl {
+  .transition(@transition) {
+  //-webkit-transform-style: e(%("preserve-3d"));
+       -webkit-transition: @transition;
+          -moz-transition: @transition;
+           -ms-transition: @transition;
+            -o-transition: @transition;
+               transition: @transition;
+  }
+}
