--- a/themes/pxl2011/less/pxl.style.less
+++ b/themes/pxl2011/less/pxl.style.less
@@ -66,7 +66,6 @@ body {
   a {
     padding: 0 @basespacing;
   }
-  
 }
 
 .menu a,
@@ -127,6 +126,142 @@ body {
     .opacity(100);
   }
 }
+
+// Colors
+// -----------------------
+// Shared colors for buttons and alerts
+.btn,
+.messages {
+  // Set text color
+  &.warning,
+  &.warning:hover,
+  &.error,
+  &.error:hover,
+  &.status,
+  &.status:hover,
+  &.info,
+  &.info:hover {
+    color: @white
+  }
+  // Sets the close button to the middle of message
+  .close{
+    font-family: Arial, sans-serif;
+    line-height: 18px;
+  }
+  // Danger and error appear as red
+  &.warning,
+  &.error {
+    .gradientBar(#ee5f5b, #c43c35);
+  }
+  // Success appears as green
+  &.status {
+    .gradientBar(#62c462, #57a957);
+  }
+  // Info appears as a neutral blue
+  &.info {
+    .gradientBar(#5bc0de, #339bb9);
+  }
+}
+
+// Messages
+// -----------------------
+
+// Base alert styles
+.messages {
+  position: relative;
+  padding: 7px 15px;
+  margin-bottom: @baseline;
+  color: @grayDark;
+  .gradientBar(#fceec1, #eedc94); // warning by default
+  text-shadow: 0 1px 0 rgba(255,255,255,.5);
+  border-width: 1px;
+  border-style: solid;
+  .border-radius(4px);
+  .box-shadow(inset 0 1px 0 rgba(255,255,255,.25));
+
+  // Adjust close icon
+  .close {
+    margin-top: 1px;
+    *margin-top: 0; // For IE7
+  }
+
+  // Make links same color as text and stand out more
+  a {
+    font-weight: bold;
+    color: @grayDark;
+  }
+  &.warning p a,
+  &.error p a,
+  &.success p a,
+  &.info p a {
+    color: @white;
+  }
+
+  // Remove extra margin from content
+  h5 {
+    line-height: @baseline;
+  }
+  p {
+    margin-bottom: 0;
+  }
+  div {
+    margin-top: 5px;
+    margin-bottom: 2px;
+    line-height: 28px;
+  }
+  .btn {
+    // Provide actions with buttons
+    .box-shadow(0 1px 0 rgba(255,255,255,.25));
+  }
+
+  &.block-message {
+    background-image: none;
+    background-color: lighten(#fceec1, 5%);
+    .reset-filter();
+    padding: 14px;
+    border-color: #fceec1;
+    .box-shadow(none);
+    ul, p {
+      margin-right: 30px;
+    }
+    ul {
+      margin-bottom: 0;
+    }
+    li {
+      color: @grayDark;
+    }
+    .alert-actions {
+      margin-top: 5px;
+    }
+    &.error,
+    &.status,
+    &.info {
+      color: @grayDark;
+      text-shadow: 0 1px 0 rgba(255,255,255,.5);
+    }
+    &.error {
+      background-color: lighten(#f56a66, 25%);
+      border-color: lighten(#f56a66, 20%);
+    }
+    &.status {
+      background-color: lighten(#62c462, 30%);
+      border-color: lighten(#62c462, 25%);
+    }
+    &.info {
+      background-color: lighten(#6bd0ee, 25%);
+      border-color: lighten(#6bd0ee, 20%);
+    }
+    // Change link color back
+    &.warning p a,
+    &.error p a,
+    &.status p a,
+    &.info p a {
+      color: @grayDark;
+    }
+
+  }
+}
+
 
 
 // Generic styles
