--- a/themes/pxl2011/less/pxl.style.less
+++ b/themes/pxl2011/less/pxl.style.less
@@ -33,16 +33,21 @@ body {
   margin-bottom: 63px;
 }
 
-.region-content {
-  & > .block {
-    #pxl > .contentBox;
-  }
+.zone-content {
   footer {
     margin: 0 0 (2*@basespacing);
     padding-top: 0;
     border: none;
   }
 }
+
+.region-content {
+  & > .block {
+    #pxl > .contentBox;
+  }
+}
+
+
 
 // Branding
 // -----------------------
