--- a/themes/pxl2011/less/pxl.typography.less
+++ b/themes/pxl2011/less/pxl.typography.less
@@ -14,6 +14,14 @@ h1,h2,h3,h4,h5,h6 {
   color: @gray;
 }
 
+.text-aside {
+  #pxlfont > .serif(100,1.428571429em);
+  
+  p {
+    #pxlfont > .serif(100,1.428571429em);
+  }
+}
+
 h2 {
   font-size: @fontMedium;
 
@@ -40,4 +48,9 @@ a {
 // Menus
 .main-menu li {
   font-size: @fontMedium;
+}
+
+// Regions
+.region-sidebar-second {
+  text-align: right;
 }
